--- a/src/style/pages/Cart.scss
+++ b/src/style/pages/Cart.scss
@@ -50,7 +50,6 @@
                 margin-top: 10px;
 
                 h5 {
-
                     margin-left: 20px;
                     font-size: 22px;
                     position: relative;
@@ -99,13 +98,17 @@
     }
 }
 
+// .total {
+//     margin-top: 20px;
+//     margin-left: 36px;
+//     height: 352px;
+//     width: 407px;
+//     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.06);
+//     border-radius: 0px 0px 16px 16px;
+// }
 .total {
     margin-top: 20px;
-    margin-left: 36px;
-    height: 352px;
-    width: 407px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.06);
-    border-radius: 0px 0px 16px 16px;
+    width: 100%;
 }
 // .total.empty {
 //     // width: 100%;
@@ -116,6 +119,7 @@
     margin-top: 20px;
     margin-left: 36px;
     width: 35%;
+    height: 100%;
     .cart__sum {
         margin-top: 24px;
         margin-left: 30px;
@@ -173,27 +177,25 @@
     }
 }
 .empty__cart {
-    // display: flex;
-    margin: 0 auto;
-    align-items: center;
+    padding: 0 180px;
+    display: flex;
+    flex-direction: column;
     img {
-        width: 400px;
+        width: 300px;
         margin: 0 auto;
-
-        margin-bottom: 60px;
+        margin-top: 20px;
     }
     button {
+        // padding: 0 180px;
         padding: 8px 16px;
-        gap: 10px;
         border: none;
-        // position: absolute;
         width: 146px;
         height: 40px;
-        // left: 647px;
-        // top: 638px;
         background: #ee2e3a;
         border-radius: 16px;
-        margin: 0 auto;
         color: white;
+        margin: 30px auto;
+        // text-align: center;
+        // align-items: center;
     }
 }
