--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,16 +1,5 @@
 footer {
-    margin-top: 36px;
-    width: 100%;
-    .footer__top {
-        width: 100%;
-        // height: 235px;
-        // border: 1px solid red;
-        // background-image: url(../../assets/images/footer.svg);
-        // background-repeat: repeat-x;
-        background-position: 10px 10px;
-    }
-}
-.footer__bottom {
+    bottom: 0;
     padding: 0 200px;
     background: #f0f0f0;
     margin-top: 50px;
@@ -20,14 +9,14 @@ footer {
     height: 100px;
     display: flex;
     justify-content: space-between;
-    .left__bot {
+    .footer__nav {
         display: flex;
         p {
             cursor: pointer;
             margin-right: 40px;
         }
     }
-    .right__bot {
+    .footer__socials {
         ul {
             display: flex;
             li {
@@ -46,36 +35,3 @@ footer {
         }
     }
 }
-
-// background-color: #fcb32a;
-// border-radius: 14px;
-// display: flex;
-// padding: 0 200px;
-// .left__top {
-//     margin-top: 48px;
-//     display: flex;
-//     width: 400px;
-//     h2 {
-//         width: 250px;
-//         font-size: 48px;
-//         span {
-//             font-size: 32px;
-//         }
-//     }
-// }
-// .right__top {
-//     width: 390px;
-//     margin-top: 48px;
-//     height: 100%;
-//     padding-top: 80px;
-//     justify-content: flex-end;
-//     .bn45 {
-//         width: 170px;
-//         height: 50px;
-//         margin-left: 12px;
-//     }
-//     .bn46 {
-//         width: 150px;
-//         height: 50px;
-//     }
-// }
