--- a/src/style/components/Header.scss
+++ b/src/style/components/Header.scss
@@ -8,6 +8,8 @@ $color_2: #ed1940;
     background-color: #ffffff;
     width: 100%;
     height: 85px;
+    opacity: 1;
+    z-index: 999;
     nav {
         background-color: #fff;
         position: fixed;
@@ -28,12 +30,12 @@ $color_2: #ed1940;
         text-align: center;
         align-items: center;
     }
-    .nav__left {
+    .baron__bros__logo {
         display: flex;
         text-align: center;
         align-items: center;
     }
-    .nav__mid {
+    .nav__links {
         font-size: 20px;
         font-weight: 700;
         line-height: 26px;
@@ -56,15 +58,15 @@ $color_2: #ed1940;
     a {
         font-family: "Inter", sans-serif !important;
     }
-    .burger__menu{
+    .burger__menu {
         display: none;
-        button{
+        button {
             background: none;
             border: none;
             cursor: pointer;
         }
-        img{
-            margin-top: 3px;
+        img {
+            margin-top: 10px;
             max-width: 28px;
         }
     }
@@ -88,8 +90,52 @@ $color_2: #ed1940;
         }
     }
 }
-.right__nav{
+.right__nav {
     display: none;
 }
 
+.cart-dropdown {
+    z-index: 99999;
+    position: absolute;
+    background-color: #ffffff;
+    overflow-y: scroll;
+    height: 400px;
+    width: 350px;
+    right: 175px;
+    top: 55px;
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(190, 190, 190, 0.39);
+    box-shadow: 0px 0px 5px 0px rgba(190, 190, 190, 0.39);
+    .my__bag {
+        margin-top: 16px;
+        margin-left: 16px;
+    }
+    .lines {
+        height: 1px;
+        width: 200px;
+        background-color: #ed1940;
+    }
+    .dropdown__styles {
+        margin-top: 16px;
+        display: flex;
+        justify-content: space-between;
 
+        width: 100%;
+        color: black;
+        padding: 0 20px;
+        .dropdown__p {
+            text-align: center;
+            align-items: center;
+            width: 20px;
+        }
+    }
+    .dropdown__link {
+        background-color: #ed1940;
+        width: 100px;
+        height: 50px !important;
+        border: none;
+        border-radius: 10px;
+        color: rgb(255, 255, 255);
+        margin: 12px 0px;
+    }
+}
